avcodec/mpegvideo_enc: fix b frame strategy 2

Fixes Ticket3757

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>